[tool.poetry]
name = "hashonde"
version = "0.1.0"
description = ""
authors = ["Fazendaaa <lucas.carotta@outlook.com>"]
license = "GNU 2.1"

[tool.poetry.dependencies]
python = "^3.10"
cement = "3.0.6"
Jinja2 = "^3.1.2"
PyYAML = "^6.0"
colorlog = "^6.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
coverage = "^6.5.0"
twine = "1.11.0"
setuptools = "38.6.0"
wheel = "0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hashonde = "hashonde.main:main"
